[gd_scene load_steps=88 format=2]

[ext_resource path="res://assets/TopDownCharacter/TopDownCharacter/Character/Character_Down.png" type="Texture" id=1]
[ext_resource path="res://MalePlayer.gd" type="Script" id=2]
[ext_resource path="res://assets/TopDownCharacter/TopDownCharacter/Character/Character_Right.png" type="Texture" id=3]
[ext_resource path="res://assets/TopDownCharacter/TopDownCharacter/Character/Character_Left.png" type="Texture" id=4]
[ext_resource path="res://assets/TopDownCharacter/TopDownCharacter/Character/Character_Up.png" type="Texture" id=5]
[ext_resource path="res://assets/TopDownCharacter/TopDownCharacter/Character/Character_DownRight.png" type="Texture" id=6]
[ext_resource path="res://assets/TopDownCharacter/TopDownCharacter/Character/Character_UpLeft.png" type="Texture" id=7]
[ext_resource path="res://assets/TopDownCharacter/TopDownCharacter/Character/Character_UpRight.png" type="Texture" id=8]
[ext_resource path="res://assets/TopDownCharacter/TopDownCharacter/Character/Character_DownLeft.png" type="Texture" id=9]
[ext_resource path="res://assets/TopDownCharacter/TopDownCharacter/Weapon/Sword_DownRight.png" type="Texture" id=10]
[ext_resource path="res://assets/TopDownCharacter/TopDownCharacter/Character/Character_SlashDownRight.png" type="Texture" id=11]
[ext_resource path="res://assets/TopDownCharacter/TopDownCharacter/Character/Character_SlashUpRight.png" type="Texture" id=12]
[ext_resource path="res://assets/TopDownCharacter/TopDownCharacter/Weapon/Sword_UpRight.png" type="Texture" id=13]
[ext_resource path="res://assets/TopDownCharacter/TopDownCharacter/Character/Character_SlashDownLeft.png" type="Texture" id=14]
[ext_resource path="res://assets/TopDownCharacter/TopDownCharacter/Weapon/Sword_DownLeft.png" type="Texture" id=15]
[ext_resource path="res://assets/TopDownCharacter/TopDownCharacter/Weapon/Sword_UpLeft.png" type="Texture" id=16]
[ext_resource path="res://assets/TopDownCharacter/TopDownCharacter/Character/Character_SlashUpLeft.png" type="Texture" id=17]
[ext_resource path="res://assets/Health Bar Asset Pack 2 by Adwit Rahman/Health Bar Asset Pack 2 by Adwit Rahman/Health Bar Asset Pack 2 by Adwit Rahman/blue1.png" type="Texture" id=18]
[ext_resource path="res://assets/Health Bar Asset Pack 2 by Adwit Rahman/Health Bar Asset Pack 2 by Adwit Rahman/Health Bar Asset Pack 2 by Adwit Rahman/red1.png" type="Texture" id=19]
[ext_resource path="res://assets/Health Bar Asset Pack 2 by Adwit Rahman/Health Bar Asset Pack 2 by Adwit Rahman/Health Bar Asset Pack 2 by Adwit Rahman/redblue (3).png" type="Texture" id=20]
[ext_resource path="res://assets/TopDownCharacter/TopDownCharacter/Character/Normal.png" type="Texture" id=21]
[ext_resource path="res://assets/Ubuntu/Ubuntu-Light.ttf" type="DynamicFontData" id=22]
[ext_resource path="res://assets/SFX2020/SFX2020/LaserShot.wav" type="AudioStream" id=23]
[ext_resource path="res://assets/SFX2020/SFX2020/GetExtraEnergyLevel.wav" type="AudioStream" id=24]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.16667, 6.33333 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ) ],
"loop": true,
"name": "AttackDownLeft",
"speed": 5.0
}, {
"frames": [ SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ) ],
"loop": true,
"name": "AttackDownRight",
"speed": 10.0
}, {
"frames": [ SubResource( 58 ), SubResource( 59 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": true,
"name": "AttackUpLeft",
"speed": 20.0
}, {
"frames": [ SubResource( 43 ), SubResource( 44 ), SubResource( 48 ), SubResource( 49 ) ],
"loop": true,
"name": "AttackUpRight",
"speed": 20.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "Up",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 8 ), SubResource( 4 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 23 ), SubResource( 25 ) ],
"loop": true,
"name": "downleft",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "downright",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "idledown",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ) ],
"loop": true,
"name": "leftidle",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ) ],
"loop": true,
"name": "rightidle",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "upidle",
"speed": 5.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "upleft",
"speed": 5.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "upright",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=37]
animations = [ {
"frames": [ SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ) ],
"loop": true,
"name": "downleft",
"speed": 10.0
}, {
"frames": [  ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 69 ), SubResource( 70 ), SubResource( 64 ), SubResource( 65 ) ],
"loop": true,
"name": "upleft",
"speed": 20.0
}, {
"frames": [ SubResource( 51 ), SubResource( 71 ), SubResource( 55 ), SubResource( 56 ) ],
"loop": true,
"name": "upright",
"speed": 20.0
} ]

[sub_resource type="CircleShape2D" id=74]
radius = 13.1867

[sub_resource type="StyleBoxFlat" id=78]
bg_color = Color( 1, 1, 1, 0.117647 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=76]
outline_size = 1
outline_color = Color( 1, 1, 1, 0.352941 )
font_data = ExtResource( 22 )

[sub_resource type="DynamicFont" id=77]
outline_size = 1
outline_color = Color( 1, 1, 1, 0.352941 )
font_data = ExtResource( 22 )

[sub_resource type="Animation" id=75]
resource_name = "Die"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Health/Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Health/icon:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.588235 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Health/blue:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Health/red:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.784314 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Health/Panel:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Health/Label:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Health/Score:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=72]
resource_name = "Hurt"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.501961 ), Color( 1, 1, 1, 0.25098 ), Color( 1, 1, 1, 0.501961 ), Color( 1, 1, 1, 0.25098 ), Color( 1, 1, 1, 0.501961 ), Color( 1, 1, 1, 0.25098 ) ]
}

[sub_resource type="Animation" id=73]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.25098 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Health/icon:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.588235 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Health/Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Health/red:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.784314 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Health/blue:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.784314 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Health/Panel:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Health/Label:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Health/Score:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="MalePlayer" type="KinematicBody2D"]
modulate = Color( 1, 1, 1, 0.25098 )
scale = Vector2( 3, 3 )
collision_mask = 12
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.166667, 3.66667 )
shape = SubResource( 1 )

[node name="Motion" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "idledown"

[node name="SwordMotion" type="AnimatedSprite" parent="."]
position = Vector2( 1, 1.11759e-08 )
rotation = 0.169297
frames = SubResource( 37 )
animation = "idle"

[node name="left" type="Area2D" parent="."]
position = Vector2( 7.66667, 1 )
rotation = 0.169297

[node name="left2" type="CollisionShape2D" parent="left"]
position = Vector2( -15.3865, 2.96823 )
shape = SubResource( 74 )

[node name="right" type="Area2D" parent="."]

[node name="right2" type="CollisionShape2D" parent="right"]
position = Vector2( 7.66667, 1 )
rotation = 0.169297
shape = SubResource( 74 )

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 1.2

[node name="HealTimer" type="Timer" parent="."]
wait_time = 0.8

[node name="Health" type="CanvasLayer" parent="."]

[node name="blue" type="Sprite" parent="Health"]
modulate = Color( 1, 1, 1, 0.784314 )
position = Vector2( 240, 94.55 )
scale = Vector2( 3.65, 2.2 )
texture = ExtResource( 18 )

[node name="red" type="Sprite" parent="Health"]
modulate = Color( 1, 1, 1, 0.784314 )
position = Vector2( 240, 82 )
scale = Vector2( 3.65, 2.2 )
texture = ExtResource( 19 )

[node name="Sprite" type="Sprite" parent="Health"]
position = Vector2( 248, 121 )
scale = Vector2( 2, 1.8 )
texture = ExtResource( 20 )

[node name="icon" type="Sprite" parent="Health"]
modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 98, 85 )
scale = Vector2( 2, 2 )
texture = ExtResource( 21 )

[node name="Panel" type="Panel" parent="Health"]
margin_left = 790.0
margin_top = 71.0
margin_right = 918.0
margin_bottom = 111.0
custom_styles/panel = SubResource( 78 )

[node name="Label" type="Label" parent="Health"]
margin_left = 814.0
margin_top = 80.0
margin_right = 865.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 76 )
text = "Score : "

[node name="Score" type="Label" parent="Health"]
margin_left = 874.0
margin_top = 81.0
margin_right = 921.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 77 )
text = "## "

[node name="fadeout" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Die = SubResource( 75 )
anims/Hurt = SubResource( 72 )
anims/RESET = SubResource( 73 )

[node name="Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 24 )
volume_db = -10.0

[node name="Attack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
volume_db = -20.0

[connection signal="body_entered" from="left" to="." method="_on_left_body_entered"]
[connection signal="body_entered" from="right" to="." method="_on_right_body_entered"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_HurtTimer_timeout"]
[connection signal="timeout" from="HealTimer" to="." method="_on_HealTimer_timeout"]
[connection signal="timeout" from="fadeout" to="." method="_on_fadeout_timeout"]
